--- a/python_ds.ipynb
+++ b/python_ds.ipynb
@@ -490,42 +490,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "A.index(9)"
+    "from typing import List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sequence_1 = []\n",
+    "def longest_consecutive(nums: List[int]) -> int:\n",
+    "    for i in nums:\n",
+    "        if i+1 in nums:\n",
+    "            sequence_1.extend([i,i+1])\n",
+    "            break\n",
+    "        elif i-1 in nums:\n",
+    "            sequence_1.extend([i-1,i])\n",
+    "            break\n",
+    "    return sequence_1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[9, 6, 12]"
+       "[5, 6]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "A[-3:]"
+    "nums = [5,6,3,4,9,13,2,16,1]\n",
+    "longest_consecutive(nums=nums)"
    ]
   },
   {
