--- a/python_ds.ipynb
+++ b/python_ds.ipynb
@@ -499,35 +499,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sequence_1 = []\n",
     "def longest_consecutive(nums: List[int]) -> int:\n",
-    "    for i in nums:\n",
-    "        if i+1 in nums:\n",
-    "            sequence_1.extend([i,i+1])\n",
-    "            break\n",
-    "        elif i-1 in nums:\n",
-    "            sequence_1.extend([i-1,i])\n",
-    "            break\n",
-    "    return sequence_1\n",
-    "\n"
+    "    if not nums:\n",
+    "        return 0\n",
+    "    nums_set = set(nums)\n",
+    "    longest = 0\n",
+    "    for num in nums_set:\n",
+    "        if num - 1 not in nums_set:\n",
+    "            current_num = num\n",
+    "            current_s = 1\n",
+    "            while current_num + 1 in nums_set:\n",
+    "                current_num+=1\n",
+    "                current_s+=1\n",
+    "            longest = max(longest, current_s)\n",
+    "\n",
+    "    return longest\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[5, 6]"
+       "6"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,6 +539,54 @@
    "source": [
     "nums = [5,6,3,4,9,13,2,16,1]\n",
     "longest_consecutive(nums=nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longest_consecutive(nums):\n",
+    "    if not nums:\n",
+    "        return 0\n",
+    "\n",
+    "    num_set = set(nums)\n",
+    "    longest_streak = 0\n",
+    "\n",
+    "    for num in num_set:\n",
+    "        # Start a sequence only if it's the beginning (num - 1 not in set)\n",
+    "        if num - 1 not in num_set:\n",
+    "            current_num = num\n",
+    "            current_streak = 1\n",
+    "\n",
+    "            while current_num + 1 in num_set:\n",
+    "                current_num += 1\n",
+    "                current_streak += 1\n",
+    "\n",
+    "            longest_streak = max(longest_streak, current_streak)\n",
+    "\n",
+    "    return longest_streak"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example usage:\n",
+    "print(longest_consecutive([100, 4, 200, 1, 3, 2]))  # Output: 4\n",
+    "print(longest_consecutive([9, 1, 8, 2, 7, 3, 6, 4, 5]))  # Output: 9"
    ]
   },
   {
