--- a/Master_python.ipynb
+++ b/Master_python.ipynb
@@ -975,6 +975,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Or\n",
+    "x = range(0,365+1,7)\n",
+    "x = list(x)\n",
+    "print(len(x))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1004,6 +1024,230 @@
     "names =[\"johnsmith\",\"jacksmith\",\"georgesmith\"]\n",
     "for i in names:\n",
     "    print(\"{0}@gmail.com\".format(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OR\n",
+    "emails = [name+'@gmail.com' for name in names]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['johnsmith@gmail.com', 'jacksmith@gmail.com', 'georgesmith@gmail.com']"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emails"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Create a script that accepts a string entered from the user, and passes the string to a function. The function itself checks the number of characters that the string has and returns the number back to the user.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_string = input('Enter your string:')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def numChar(user_string):\n",
+    "    user_string = input('Enter your string:')\n",
+    "    d = len(user_string)\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numChar(user_string=user_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[101, 1002]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i+j for i,j in zip ([1,2],[100,1000])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def email_generator (name, surname, email=\"gmail\", extension=\".com\"): \n",
+    "    address = \"{0}{1}@{2}{3}\".format(name,surname,email,extension) \n",
+    "    return address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['JohnSmith@gmail.com', 'MarkPond@gmail.com', 'GeorgeLondon@gmail.com']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[email_generator(nm,sr) for nm,sr in zip([\"John\",\"Mark\",\"George\"],[\"Smith\",\"Pond\",\"London\"])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Property:\n",
+    "   def __init__(self, address, prop_type):\n",
+    "     self.address = address \n",
+    "     self.prop_type = prop_type\n",
+    "     print(\"Generates information about properties\") \n",
+    "   def getaddress(self):\n",
+    "     print(\"Address: %s\" % self.address) \n",
+    "   def gettype(self):\n",
+    "     print(\"Property type: %s\" % self.prop_type)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generates information about properties\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Property at 0x29c52a0bb30>"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Property(\"Lighted Street\", \"Hotel\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generates information about properties\n",
+      "Address: Lighted Street\n"
+     ]
+    }
+   ],
+   "source": [
+    "Property(\"Lighted Street\", \"Hostel\").getaddress()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ls = [7, 31, 365]\\n',\n",
+       " 'print(\"A week has {0} days, the longest month has {1}, while the longest Julian year has {2}\".format(ls[0],ls[1],ls[2]))']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = open('hello.py','r')\n",
+    "file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for line in file:\n",
+    "    print(line)"
    ]
   },
   {
