--- a/python_ds.ipynb
+++ b/python_ds.ipynb
@@ -590,6 +590,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Create a Phone class designed to create mobile phone objects. Define two attributes for the class, price, and brand.*\n",
+    "- *In addition to the ```__init__``` method, define two other methods, a getprice, and a getbrand method.*\n",
+    "- *The getprice and the getbrand method will display information about the phone price and brand respectively.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Phone():\n",
+    "    def __init__(self, price, brand):\n",
+    "        self.price = price\n",
+    "        self.brand = brand\n",
+    "        print('Information about the price and brand')\n",
+    "    def getbrand(self):\n",
+    "        print('Brand of the phone is:{self.brand}')\n",
+    "    def getprice(self):\n",
+    "        print('The price of the phone {self.price}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Smartphone(Phone):\n",
+    "    def __init__(self,price,screensize, ):\n",
+    "         super().__init__(price, \"Beta\") \n",
+    "         self.screensize = screensize \n",
+    "         def getscreensize(self):\n",
+    "             print(\"Mobile screen size: %s\" % self.screensize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2025, 3, 14, 18, 14, 3, 193123)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "datetime.datetime.now()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<module 'datetime' from 'C:\\\\Python312\\\\Lib\\\\datetime.py'>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datetime"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
