--- a/python_ds.ipynb
+++ b/python_ds.ipynb
@@ -675,7 +675,26 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Open a file and read the text inside it\n",
+    "file = open('path','r')\n",
+    "file.read()\n",
+    "file.close()\n",
+    "# To read text line by line:\n",
+    "file = open(\"path\",'r')\n",
+    "file.readlines()\n",
+    "#To open and write a text file into existing file\n",
+    "file = open(\"path\",'a')\n",
+    "file.write('The text to write into file')\n",
+    "file.close()\n",
+    "# open and write file into a text file\n",
+    "file = open(\"path\",'w')\n",
+    "file.write('This a text to put into the file')\n",
+    "file.close()\n",
+    "# Use with to loop over\n",
+    "with open(\"path\",\"r\").file:\n",
+    "    file.read()"
+   ]
   }
  ],
  "metadata": {
