--- a/python_ds.ipynb
+++ b/python_ds.ipynb
@@ -683,7 +683,7 @@
     "# To read text line by line:\n",
     "file = open(\"path\",'r')\n",
     "file.readlines()\n",
-    "#To open and write a text file into existing file\n",
+    "#To open and write inside a text file\n",
     "file = open(\"path\",'a')\n",
     "file.write('The text to write into file')\n",
     "file.close()\n",
@@ -692,9 +692,55 @@
     "file.write('This a text to put into the file')\n",
     "file.close()\n",
     "# Use with to loop over\n",
-    "with open(\"path\",\"r\").file:\n",
+    "with open(\"path\",\"r\") as file:\n",
     "    file.read()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This removed all the existing text file and puts new text 'tensorflow' and 'pandas'\n",
+    "file = open(\"requirements.txt\", 'w')\n",
+    "file.write('tensorflow\\npandas\\nnumpy\\nmatplotlib.pyplot\\nseaborn')\n",
+    "file.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.makedirs('file_handling')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"file_handling\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
