--- a/python_ds.ipynb
+++ b/python_ds.ipynb
@@ -737,10 +737,414 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e:\\\\python_tutorial\\\\file_handling'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.git',\n",
+       " '.gitignore',\n",
+       " '.ipynb_checkpoints',\n",
+       " 'data',\n",
+       " 'file_handling',\n",
+       " 'hello.py',\n",
+       " 'LICENSE',\n",
+       " 'Master_python.ipynb',\n",
+       " 'models',\n",
+       " 'new_data.xlsx',\n",
+       " 'notebooks',\n",
+       " 'pandas_steps.ipynb',\n",
+       " 'python_ds.ipynb',\n",
+       " 'README.md',\n",
+       " 'requirements.txt']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "os.listdir('e:\\\\python_tutorial')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.chdir('../')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.rmdir(\"file_handling\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import shutil as st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To delete a directory with files inside\n",
+    "st.rmtree('directory_with_files')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Write a Python script that will create a new text file in your computer.* \n",
+    "- *Then, using looping, write the following lines of text inside the text file:*\n",
+    "- ```1145, 1139, 1132, No data, 1141```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"new_file.txt\",'w') as file:\n",
+    "    for item in ['1145','1139','1132','No Data','1141']:\n",
+    "        file.write(item+'\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *In this exercise, you have to do the reverse of exercise 1 that is reading the existing text file you created in exercise 1, and store the lines of text in a list.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = []\n",
+    "with open('new_file.txt','r') as file:\n",
+    "    for i in ['1145','1139','1132','No Data','1141']:\n",
+    "        file.readlines()\n",
+    "        #print(file.readlines)\n",
+    "        data.append(i.strip(\"\\n\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['1145', '1139', '1132', 'No Data', '1141']"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Database handling**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sqlite3\n",
+    "\n",
+    "db = sqlite3.connect('mydb.db')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x204f312d940>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.execute('create table song ( title text, author text, rating int)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*To avoid that, you can add another line before creating the table as follows: ```db.execute('drop table if exists song')```*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x204f312d040>"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "db.execute('insert into song (title, author, rating) values (\"The map of reality\", \"The New Smiths\",9)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*If you change your mind about the values you inserted, you can always updtate them using the SQL update keyword as follows:* "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db.execute('update song set rating = 10 where title = \"The map of reality\"') \n",
+    "db.commit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = db.execute('select * from song')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('The map of reality', 'The New Smiths', 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in data:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Lastly, we will see how we can delete rows from a table using Python.* \n",
+    "- *As you might expect, this also employs very few code:\n",
+    "```db.execute('delete from song where rating = 10')``` \n",
+    "```db.commit()```\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Regular expressions**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(18, 22), match='that'>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "text = \"Here is some text that contains something.\"\n",
+    "pattern= \"that\"\n",
+    "re.search(pattern, text)\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18, 22)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#If you need, you can extract the span of the pattern,\n",
+    "#by applying the span method to the match object as follows: \n",
+    "re.search(pattern,text).span()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#You can also extract the start index only: \n",
+    "re.search(pattern,text).start()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Similarly, you can also get the end index: \n",
+    "re.search(pattern,text).end()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yes, that was found in the text\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Here is some text that contains something.\"\n",
+    "\n",
+    "pattern = \"that\"\n",
+    "\n",
+    "if re.search(pattern, text):\n",
+    "    print(\"Yes, %s was found in the text\" % pattern) \n",
+    "else:\n",
+    "    print(\"No, %s was not found in the text\" % pattern)"
+   ]
   }
  ],
  "metadata": {
