--- a/python_ds.ipynb
+++ b/python_ds.ipynb
@@ -1145,6 +1145,104 @@
     "else:\n",
     "    print(\"No, %s was not found in the text\" % pattern)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def checkPat(pattern:str) -> str:\n",
+    "    pattern = input(\"Enter the pattern to be searched:\")\n",
+    "    text = \"Here is some text that contains something.\"\n",
+    "    if re.search(pattern, text):\n",
+    "        print('Yes \"{}\" found in the text'.format(pattern))\n",
+    "        print(re.search(pattern, text).span())\n",
+    "    else:\n",
+    "        print('No! \"{}\" not found in text'.format(pattern))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No! \"love\" not found in text\n"
+     ]
+    }
+   ],
+   "source": [
+    "checkPat(pattern=pattern)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Matching more than one pattern**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *In our previous example, we had only one pattern occurring in the text. If we had two same patterns, the search method would fail to find them both:*\n",
+    "```python\n",
+    " text = \"Here is some text that contains something that occurs twice.\"\n",
+    "```\n",
+    "```python\n",
+    "pattern= \"that\"\n",
+    "```\n",
+    "```python\n",
+    "re.search(pattern, text)\n",
+    "```\n",
+    "*This would return this:*\n",
+    "```python\n",
+    "<_sre.SRE_Match object; span=(18, 22), match='that'>\n",
+    "```\n",
+    "- As you see, that would capture only the pattern that occurs first.\n",
+    "- To capture all patterns, we need to use the findall method as follows: \n",
+    "```python\n",
+    "text = \"Here is some text that contains something that occurs twice.\"\n",
+    "pattern= \"that\"\n",
+    "re.findall(pattern, text)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = \"Here is some text that contains something that occurs twice.\"\n",
+    "pattern= \"that\"\n",
+    "all_pat = re.findall(pattern, text)\n",
+    "len(all_pat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
