--- a/python_ds.ipynb
+++ b/python_ds.ipynb
@@ -1238,6 +1238,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* *If you still want to get match object as return, instead of a list, you would have to use the finditer method.finditer will return an iterator object which contains the set of match objects found during the search. Here is how we would implement it:*\n",
+    "```python\n",
+    "import re\n",
+    "text = \"Here is some text that contains something that occurs twice.\"\n",
+    "pattern= \"that\"\n",
+    "matches = re.finditer(pattern, text) for i in matches:\n",
+    "print(i.span())\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<callable_iterator object at 0x00000204F2E80370>\n",
+      "(18, 22)\n",
+      "(42, 46)\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Here is some text that contains something that occurs twice.\"\n",
+    "pattern = 'that'\n",
+    "matches = re.finditer(pattern,text) \n",
+    "print(matches)\n",
+    "for i in matches:\n",
+    "    print(i.span())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
