--- a/python_ds.ipynb
+++ b/python_ds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "            return False\n",
     "        else:\n",
     "            True\n",
-    "        return True\n"
+    "        return True"
    ]
   },
   {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -49,9 +49,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "li"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1274,6 +1272,13 @@
     "for i in matches:\n",
     "    print(i.span())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
