--- a/python_challenges.ipynb
+++ b/python_challenges.ipynb
@@ -18,10 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Two pointers approach\n",
     "def mergeAlternatively(word1,word2):\n",
     "    m = len(word1)\n",
     "    n = len(word2)\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,13 +51,53 @@
        "'msywleoevteh'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "mergeAlternatively(word1='mylove',word2='sweetheart')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Single pointer approach\n",
+    "class Solution(object):\n",
+    "    def mergeAlternately(self, word1, word2):\n",
+    "        result = []\n",
+    "        n = max(len(word1), len(word2))\n",
+    "        for i in range(n):\n",
+    "            if i < len(word1):\n",
+    "                result += word1[i]\n",
+    "            if i < len(word2):\n",
+    "                result += word2[i]\n",
+    "\n",
+    "        return \"\".join(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'msywleoevteheart'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Solution().mergeAlternately(word1='mylove',word2='sweetheart')"
    ]
   },
   {
