--- a/pandas_steps.ipynb
+++ b/pandas_steps.ipynb
@@ -14,6 +14,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
@@ -1447,7 +1454,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['age_group'] = df['Age'].apply(lambda x: )"
+   ]
   }
  ],
  "metadata": {
