--- a/python_challenges.ipynb
+++ b/python_challenges.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,37 +385,37 @@
     "        return a\n",
     "    def lcm(self, a,b):\n",
     "        return (a*b)//(self.gcd(a,b))\n",
-    "    def checknum(self, nums):\n",
+    "    def gcd_arr(self,nums):\n",
     "        if len(nums)==1:\n",
-    "            gcd_res = nums[0]\n",
-    "            lcm_res = nums[0]\n",
-    "            return gcd_res*lcm_res\n",
-    "        elif len(self,nums) == 2:\n",
-    "            gcd_res = nums[1]\n",
-    "            lcm_res = nums[2]\n",
-    "            return gcd_res*lcm_res\n",
+    "            res = nums[0]\n",
+    "        elif len(nums)==2:\n",
+    "            res = nums[1]\n",
     "        else:\n",
-    "            def gcd_arr(self,nums):\n",
-    "                arr = nums[1]\n",
-    "                for i in nums[2:]:\n",
-    "                    res = self.gcd(arr,i)\n",
-    "                return res\n",
-    "            def lcm_arr(self, nums):\n",
-    "                results = nums[1]\n",
-    "                for i in nums[2:]:\n",
-    "                    results = self.lcm(results,i)\n",
-    "                return results\n",
-    "            def productOfLcmGCM(self, nums):\n",
-    "                lcm_res = self.lcm_arr(nums)\n",
-    "                gcm_res = self.gcd_arr(nums)\n",
-    "                return lcm_res*gcm_res\n",
+    "            arr = nums[1]\n",
+    "            for i in nums[2:]:\n",
+    "                res = self.gcd(arr,i)\n",
+    "        return res\n",
+    "    def lcm_arr(self, nums):\n",
+    "        if len(nums)==1:\n",
+    "            results = nums[0]\n",
+    "        elif len(nums)==2:\n",
+    "            results = nums[1]\n",
+    "        else:\n",
+    "            results = nums[1]\n",
+    "            for i in nums[2:]:\n",
+    "                results = self.lcm(results,i)\n",
+    "        return results\n",
+    "    def productOfLcmGCM(self, nums):\n",
+    "        lcm_res = self.lcm_arr(nums)\n",
+    "        gcm_res = self.gcd_arr(nums)\n",
+    "        return lcm_res*gcm_res\n",
     "    \n",
     "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
        "60"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,25 +436,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[95], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#MySolution().productOfLcmGCM([2,4,8,16])\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[43mMySolution\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mproductOfLcmGCM\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[91], line 19\u001b[0m, in \u001b[0;36mMySolution.productOfLcmGCM\u001b[1;34m(self, nums)\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mproductOfLcmGCM\u001b[39m(\u001b[38;5;28mself\u001b[39m, nums):\n\u001b[1;32m---> 19\u001b[0m     lcm_res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlcm_arr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mnums\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     20\u001b[0m     gcm_res \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mgcd_arr(nums)\n\u001b[0;32m     21\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m lcm_res\u001b[38;5;241m*\u001b[39mgcm_res\n",
-      "Cell \u001b[1;32mIn[91], line 14\u001b[0m, in \u001b[0;36mMySolution.lcm_arr\u001b[1;34m(self, nums)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mlcm_arr\u001b[39m(\u001b[38;5;28mself\u001b[39m, nums):\n\u001b[1;32m---> 14\u001b[0m     results \u001b[38;5;241m=\u001b[39m \u001b[43mnums\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m nums[\u001b[38;5;241m2\u001b[39m:]:\n\u001b[0;32m     16\u001b[0m         results \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlcm(results,i)\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/plain": [
+       "9"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "#MySolution().productOfLcmGCM([2,4,8,16])\n",
     "MySolution().productOfLcmGCM([3])"
    ]
   },
@@ -476,6 +472,36 @@
    ],
    "source": [
     "MySolution().lcm_arr([1,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MySolution().productOfLcmGCM([2,4,8,16])\n",
+    "MySolution().productOfLcmGCM([3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *You have a long flowerbed in which some of the plots are planted, and some are not. However, flowers cannot be planted in adjacent plots.*\n",
+    "\n",
+    "- Given an integer array flowerbed containing 0's and 1's, where 0 means empty and 1 means not empty, and an integer n, return true if n new flowers can be planted in the flowerbed without violating the no-adjacent-flowers rule and false otherwise.*\n",
+    "\n",
+    "* *Example 1:*\n",
+    "```python\n",
+    "Input: flowerbed = [1,0,0,0,1], n = 1\n",
+    "Output: true\n",
+    "```\n",
+    "* *Example 2:*\n",
+    "```python\n",
+    "Input: flowerbed = [1,0,0,0,1], n = 2\n",
+    "Output: false\n",
+    "```"
    ]
   },
   {
