--- a/python_challenges.ipynb
+++ b/python_challenges.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,20 +386,30 @@
     "    def lcm(self, a,b):\n",
     "        return (a*b)//(self.gcd(a,b))\n",
     "    def gcd_arr(self,nums):\n",
-    "        if len(nums)==1:\n",
+    "        nums = sorted(nums)\n",
+    "        if len(nums) == 0:\n",
+    "            res = 0\n",
+    "        elif len(nums)==1:\n",
     "            res = nums[0]\n",
     "        elif len(nums)==2:\n",
     "            res = nums[1]\n",
+    "        elif len(nums) == 3:\n",
+    "            res = self.gcd(nums[1],nums[2])\n",
     "        else:\n",
     "            arr = nums[1]\n",
     "            for i in nums[2:]:\n",
     "                res = self.gcd(arr,i)\n",
     "        return res\n",
     "    def lcm_arr(self, nums):\n",
-    "        if len(nums)==1:\n",
+    "        nums = sorted(nums)\n",
+    "        if len(nums) == 0:\n",
+    "            results = 0\n",
+    "        elif len(nums)==1:\n",
     "            results = nums[0]\n",
     "        elif len(nums)==2:\n",
     "            results = nums[1]\n",
+    "        elif len(nums) == 3:\n",
+    "            results = self.lcm(nums[1],nums[2])\n",
     "        else:\n",
     "            results = nums[1]\n",
     "            for i in nums[2:]:\n",
@@ -415,28 +425,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math as ma\n",
+    "print(ma.gcd(14,20))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "60"
+       "140"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#MySolution().productOfLcmGCM([2,4,8,16])\n",
-    "MySolution().productOfLcmGCM([1,2,3,4,5])"
+    "MySolution().lcm(14,20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "280"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MySolution().productOfLcmGCM([6,14,20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "121"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MySolution().productOfLcmGCM([11,4])\n",
+    "#MySolution().productOfLcmGCM([1,2,3,4,5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +513,7 @@
        "9"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +524,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gcd(a,b):\n",
+    "    while b:\n",
+    "        a,b = b, a%b\n",
+    "    return a\n",
+    "def gcd_arr(nums):\n",
+    "    nums = sorted(nums)\n",
+    "    arr = nums[0]\n",
+    "    for i in nums[1:]:\n",
+    "        res = gcd(arr,i)\n",
+    "    return res\n",
+    "def lcm_2(a,b):\n",
+    "    return (a*b)//(gcd(a,b))\n",
+    "def arr_lcm_2(nums):\n",
+    "    nums = sorted(nums)\n",
+    "    arr = nums[0]\n",
+    "    for i in nums[1:]:\n",
+    "        res = lcm_2(arr, i)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -465,13 +559,74 @@
        "60"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MySolution().lcm_arr([1,2,3,4,5])"
+    "arr_lcm_2([6,14,20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MySolution().lcm_arr([6,14,20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MySolution().gcd_arr([6,14,20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#MySolution().productOfLcmGCM([2,4,8,16])\n",
+    "MySolution().productOfLcmGCM([11,4])"
    ]
   },
   {
@@ -480,8 +635,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#MySolution().productOfLcmGCM([2,4,8,16])\n",
-    "MySolution().productOfLcmGCM([3])"
+    "from math import gcd\n",
+    "from functools import reduce\n",
+    "\n",
+    "def lcm(a, b):\n",
+    "    return (a * b) // gcd(a, b)\n",
+    "\n",
+    "def max_factor_score(nums):\n",
+    "    if not nums:\n",
+    "        return 0\n",
+    "    \n",
+    "    n = len(nums)\n",
+    "    if n == 1:\n",
+    "        return 0  # Removing the only element results in an empty array\n",
+    "    \n",
+    "    # Compute prefix and suffix GCD arrays\n",
+    "    prefix_gcd = [0] * n\n",
+    "    suffix_gcd = [0] * n\n",
+    "    \n",
+    "    prefix_gcd[0] = nums[0]\n",
+    "    for i in range(1, n):\n",
+    "        prefix_gcd[i] = gcd(prefix_gcd[i - 1], nums[i])\n",
+    "    \n",
+    "    suffix_gcd[-1] = nums[-1]\n",
+    "    for i in range(n - 2, -1, -1):\n",
+    "        suffix_gcd[i] = gcd(suffix_gcd[i + 1], nums[i])\n",
+    "    \n",
+    "    # Compute the maximum factor score\n",
+    "    max_score = 0\n",
+    "    \n",
+    "    for i in range(n):\n",
+    "        if i == 0:\n",
+    "            current_gcd = suffix_gcd[1]\n",
+    "        elif i == n - 1:\n",
+    "            current_gcd = prefix_gcd[n - 2]\n",
+    "        else:\n",
+    "            current_gcd = gcd(prefix_gcd[i - 1], suffix_gcd[i + 1])\n",
+    "        \n",
+    "        # Compute LCM of the remaining elements\n",
+    "        if i == 0:\n",
+    "            remaining_nums = nums[1:]\n",
+    "        elif i == n - 1:\n",
+    "            remaining_nums = nums[:-1]\n",
+    "        else:\n",
+    "            remaining_nums = nums[:i] + nums[i + 1:]\n",
+    "        \n",
+    "        current_lcm = reduce(lcm, remaining_nums)\n",
+    "        \n",
+    "        # Calculate factor score\n",
+    "        factor_score = current_gcd * current_lcm\n",
+    "        max_score = max(max_score, factor_score)\n",
+    "    \n",
+    "    return max_score"
    ]
   },
   {
