--- a/python_challenges.ipynb
+++ b/python_challenges.ipynb
@@ -425,218 +425,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "import math as ma\n",
-    "print(ma.gcd(14,20))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "140"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MySolution().lcm(14,20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "280"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MySolution().productOfLcmGCM([6,14,20])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "121"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MySolution().productOfLcmGCM([11,4])\n",
-    "#MySolution().productOfLcmGCM([1,2,3,4,5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 136,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9"
-      ]
-     },
-     "execution_count": 136,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MySolution().productOfLcmGCM([3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def gcd(a,b):\n",
+    "def gcd(a, b):\n",
     "    while b:\n",
-    "        a,b = b, a%b\n",
+    "        a, b = b, a % b\n",
     "    return a\n",
-    "def gcd_arr(nums):\n",
-    "    nums = sorted(nums)\n",
-    "    arr = nums[0]\n",
-    "    for i in nums[1:]:\n",
-    "        res = gcd(arr,i)\n",
-    "    return res\n",
-    "def lcm_2(a,b):\n",
-    "    return (a*b)//(gcd(a,b))\n",
-    "def arr_lcm_2(nums):\n",
-    "    nums = sorted(nums)\n",
-    "    arr = nums[0]\n",
-    "    for i in nums[1:]:\n",
-    "        res = lcm_2(arr, i)\n",
-    "    return res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "60"
-      ]
-     },
-     "execution_count": 155,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr_lcm_2([6,14,20])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "140"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MySolution().lcm_arr([6,14,20])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 147,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 147,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "MySolution().gcd_arr([6,14,20])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "44"
-      ]
-     },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#MySolution().productOfLcmGCM([2,4,8,16])\n",
-    "MySolution().productOfLcmGCM([11,4])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from math import gcd\n",
-    "from functools import reduce\n",
     "\n",
     "def lcm(a, b):\n",
     "    return (a * b) // gcd(a, b)\n",
@@ -680,7 +476,10 @@
     "        else:\n",
     "            remaining_nums = nums[:i] + nums[i + 1:]\n",
     "        \n",
-    "        current_lcm = reduce(lcm, remaining_nums)\n",
+    "        # Compute LCM using reduce-like logic\n",
+    "        current_lcm = remaining_nums[0]\n",
+    "        for num in remaining_nums[1:]:\n",
+    "            current_lcm = lcm(current_lcm, num)\n",
     "        \n",
     "        # Calculate factor score\n",
     "        factor_score = current_gcd * current_lcm\n",
