--- a/python_challenges.ipynb
+++ b/python_challenges.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,9 +418,7 @@
     "    def productOfLcmGCM(self, nums):\n",
     "        lcm_res = self.lcm_arr(nums)\n",
     "        gcm_res = self.gcd_arr(nums)\n",
-    "        return lcm_res*gcm_res\n",
-    "    \n",
-    "        \n"
+    "        return lcm_res*gcm_res"
    ]
   },
   {
@@ -506,6 +504,53 @@
     "Input: flowerbed = [1,0,0,0,1], n = 2\n",
     "Output: false\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Brute force approach\n",
+    "- *Generate all possible permutations of a list.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_permutations(nums):\n",
+    "    if len(nums) == 0:\n",
+    "        return []\n",
+    "    if len(nums) == 1:\n",
+    "        return [nums]\n",
+    "    permutations = []\n",
+    "    for i in range(len(nums)):\n",
+    "        remaining = nums[:i] + nums[i + 1:]\n",
+    "        for p in generate_permutations(remaining):\n",
+    "            permutations.append([nums[i]] + p)\n",
+    "    return permutations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2, 3], [1, 3, 2], [2, 1, 3], [2, 3, 1], [3, 1, 2], [3, 2, 1]]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "generate_permutations(nums=[1,2,3])"
    ]
   },
   {
