--- a/python_challenges.ipynb
+++ b/python_challenges.ipynb
@@ -554,6 +554,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Medium challenge**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- *Given an integer array nums, return an array answer such that answer[i] is equal to the product of all the elements of nums except nums[i].*\n",
+    "\n",
+    "- The product of any prefix or suffix of nums is guaranteed to fit in a 32-bit integer.\n",
+    "- You must write an algorithm that runs in O(n) time and without using the division operation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def productExceptSelf(self, nums):\n",
+    "        \"\"\"\n",
+    "        :type nums: List[int]\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        n = len(nums)\n",
+    "        answer = [1] * n\n",
+    "        for i in range(1, n):\n",
+    "            answer[i] = answer[i - 1] * nums[i - 1]\n",
+    "        right_product = 1\n",
+    "        for i in range(n - 1, -1, -1):\n",
+    "            answer[i] *= right_product\n",
+    "            right_product *= nums[i]\n",
+    "        return answer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[40, 20, 10, 8]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Solution().productExceptSelf(nums=[1,2,4,5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 4, 3, 4]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
