--- a/python_challenges.ipynb
+++ b/python_challenges.ipynb
@@ -614,23 +614,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 59,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 4, 3, 4]"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "A"
+    "**N-Queens Problem**"
    ]
   },
   {
